another day another push

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <button>Home</button>
+        <button class="active">Home</button>
         <button onclick="goToPortfolio()">Portfolio</button>
         <button onclick="goToResume()">Resume</button>
         <button onclick="goToService()">Service</button>
@@ -18,26 +18,41 @@
     </div>
     <div class="content">
         <div class="description">
-            <h2>Hello!!! Welcome to my website for 331! </h2>
-            <p>My name is Junyi Wu, and I am a junior majoring in Computer Engineering 💻 with a minor in Mathematics! 😼</p>
+            <h1>Hello!!! Welcome to my website for CSCE-331! </h1>
+            <p><h4>
+                My name is Junyi, and I am a junior majoring in Computer Engineering 💻 
+                with a minor in Mathematics🧮! 😼
+            </h4></p>
             <div class="description-box">
-                <p>I am currently taking the following courses: </p>
+                <p>I am currently taking the following courses this semester (Spring '25): </p>
                 <ul>
-                    <li>CSCE 331 - Foundation in Software Engineering 💻</li>
-                    <li>CSCE 469 - Advanced Computer Architecture 💻</li>
-                    <li>ECEN 749 - Microprocessor Systems Design 💻</li>
-                    <li>MATH 414 - Fourier Wavelets 💻</li>
+                    <li><b>CSCE 331 - Foundation in Software Engineering</b>💻.
+                        A class that focuses on large scale software development, such as full stack web development.
+                    </li>
+                    <li><b>CSCE 469 - Advanced Computer Architecture</b>💻.
+                        The sequel to my Computer Architecture class that focuses on memory designs, piepine techginiques, and parallel structures!
+                    </li>
+                    <li><b>ECEN 749 - Microprocessor Systems Design</b>💻.
+                        A class that focuses on microprocessors, covering topics 
+                        such as 16/32-bit computer hardware, serial and parallel I/O interfacing, and memory circuits designed for no-wait-state operation.
+                    </li>
+                    <li><b>MATH 414 - Fourier Series and Wavelets</b>💻.
+                        A class that focuses on fourier transform with applications in data compressions and signal processing.
+                    </li>
                 </ul>
             </div>
             <div class="description-box">
                 <p>I chose this major because when I was little I was passionate about electronics. 
-                    After taking few ECEN coureses, I developed a passion for VLSI systems design. 
-                    In my 454 classes, working with Cadence Virtuoso Tool, I  
+                    After taking few ECEN coureses, I developed a passion for VLSI systems design, and Computer Architecture.
+                    
                 </p>
             </div>
         </div>
-        <div class="portrait">
-            <img src="pictures/selfie_3.jpg" alt="Portrait">
+        <div class="selfie" >
+            <img src="pictures/selfie_3.jpg" alt="Me and my dog">
+            <div class="caption"> 
+                This is me and my dog Oliver in winter of 2022. 
+            </div>
         </div>
     </div>
     <script>
