--- a/qualifications.html
+++ b/qualifications.html
@@ -15,6 +15,26 @@
         <button onclick="goToAI()">AI Page</button>
         <button>Change Layout</button>
     </div>
+    <div class="resume-page">
+        <div class="resume">
+            <h2> My Resume 😼</h2>
+            <embed src="JUNYI_WU_RESUME.pdf" width="100%" height="600px" type="application/pdf">
+        </div>
+        <div class="description-box">
+            <h3>Technical Skills</h3>
+            <p>No Skills</p>
+        </div>
+        <div class="description-box">
+            <h3>Technical Areas of Interest</h3>
+            <ul>
+                <li>VLSI Systems Design</li>
+                <li>Computer Architecture</li>
+                <li>Hardware Verification</li>
+            </ul>
+            <p> I am interested in these areas due to  </p>
+        </div>
+    </div>
+    </div>
     <script>
         function goHome() {
             window.location.href = 'index.html';
