--- a/genai.html
+++ b/genai.html
@@ -12,7 +12,7 @@
         <button onclick="goToPortfolio()">Portfolio</button>
         <button onclick="goToResume()">Resume</button>
         <button onclick="goToService()">Service</button>
-        <button>AI Page</button>
+        <button>GPT Page</button>
         <button>Change Layout</button>
     </div>
     <script>
