--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
         <button onclick="goToPortfolio()">Portfolio</button>
         <button onclick="goToResume()">Resume</button>
         <button onclick="goToService()">Service</button>
-        <button onclick="goToAI()">AI Page</button>
+        <button onclick="goToAI()">GPT Page</button>
         <button>Change Layout</button>
     </div>
     <div class="content">
         <div class="description">
-            <h1>Hello!!! Welcome to my website for CSCE-331! </h1>
+            <h1>Hello!!! Welcome to my website for CSCE-331! 😁</h1>
             <p><h4>
                 My name is Junyi, and I am a junior majoring in Computer Engineering 💻 
-                with a minor in Mathematics🧮! 😼
+                with a minor in Mathematics🧮! And I am studying at Texas A&M in College Station 😼
             </h4></p>
+            <hr style="border: 2px solid rgb(0, 240, 240); margin: 10px;">
             <div class="description-box">
                 <p>I am currently taking the following courses this semester (Spring '25): </p>
                 <ul>
@@ -30,7 +31,7 @@
                         A class that focuses on large scale software development, such as full stack web development.
                     </li>
                     <li><b>CSCE 469 - Advanced Computer Architecture</b>💻.
-                        The sequel to my Computer Architecture class that focuses on memory designs, piepine techginiques, and parallel structures!
+                        The sequel to my Computer Architecture class that focuses on memory designs, piepine techniques, and parallel structures!
                     </li>
                     <li><b>ECEN 749 - Microprocessor Systems Design</b>💻.
                         A class that focuses on microprocessors, covering topics 
@@ -41,17 +42,26 @@
                     </li>
                 </ul>
             </div>
+            <hr style="border: 2px solid rgb(0, 240, 240); margin: 10px;">
             <div class="description-box">
-                <p>I chose this major because when I was little I was passionate about electronics. 
-                    After taking few ECEN coureses, I developed a passion for VLSI systems design, and Computer Architecture.
-                    
+                <p>I chose this major because when I was little I was passionate about electronics. As you can see 
+                from the courses above, many are about digital electronics and the architecture design align with my interests.
+                These courses will provide me with a strong fundamental and will be essential for what I want to do in the near future.
+                </p>
+            </div>
+            <hr style="border: 2px solid rgb(0, 240, 240); margin: 10px;">
+            <div class="description-box">
+                <h3> Hobbies: </h3>
+                <p>
+                <b>Jogging/Running</b> 
+                <b>Hiking</b>
                 </p>
             </div>
         </div>
         <div class="selfie" >
             <img src="pictures/selfie_3.jpg" alt="Me and my dog">
             <div class="caption"> 
-                This is me and my dog Oliver in winter of 2022. 
+                This is me and my dog in winter of 2022. 
             </div>
         </div>
     </div>
