--- a/qualifications.html
+++ b/qualifications.html
@@ -12,17 +12,18 @@
         <button onclick="goToPortfolio()">Portfolio</button>
         <button>Resume</button>
         <button onclick="goToService()">Service</button>
-        <button onclick="goToAI()">AI Page</button>
+        <button onclick="goToAI()">GPT Page</button>
         <button>Change Layout</button>
     </div>
     <div class="resume-page">
         <div class="resume">
             <h2> My Resume 😼</h2>
-            <embed src="JUNYI_WU_RESUME.pdf" width="100%" height="600px" type="application/pdf">
+            <embed src="JUNYI_WU_RESUME.pdf" width="100%" height="1000px" type="application/pdf">
         </div>
         <div class="description-box">
             <h3>Technical Skills</h3>
-            <p>No Skills</p>
+            <p><b>Programming Languages: </b>Python, C++, Verilog HDL, ARMv8 Assembly</p>
+            <p><b>Software Dev. Tools: </b>VS Code, Vivado</p>
         </div>
         <div class="description-box">
             <h3>Technical Areas of Interest</h3>
@@ -30,8 +31,9 @@
                 <li>VLSI Systems Design</li>
                 <li>Computer Architecture</li>
                 <li>Hardware Verification</li>
+                <li>ASIC Design</li>
             </ul>
-            <p> I am interested in these areas due to  </p>
+            <p> I am interested in these areas due to </p>
         </div>
     </div>
     </div>
