--- a/service.html
+++ b/service.html
@@ -12,7 +12,7 @@
         <button onclick="goToPortfolio()">Portfolio</button>
         <button onclick="goToResume()">Resume</button>
         <button>Service</button>
-        <button onclick="goToAI()">AI Page</button>
+        <button onclick="goToAI()">GPT Page</button>
         <button>Change Layout</button>
     </div>
     <script>
