--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
         <button>Portfolio</button>
         <button onclick="goToResume()">Resume</button>
         <button onclick="goToService()">Service</button>
-        <button onclick="goToAI()">AI Page</button>
+        <button onclick="goToAI()">GPT Page</button>
         <button>Change Layout</button>
     </div>
     <script>
