--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <button onclick="goHome()">Home</button>
-        <button>Portfolio</button>
-        <button onclick="goToResume()">Resume</button>
-        <button onclick="goToService()">Service</button>
-        <button onclick="goToAI()">GPT Page</button>
-        <button>Change Layout</button>
+        <a href="index.html" class="button">Home</button>
+        <a href="portfolio.html" class="button">Portfolio</a>
+        <a href="qualifications.html" class="button">Resume</a>
+        <a href="service.html" class="button">Service</a>
+        <a href="genai.html" class="button">GPT Page</a>
+        <a class="button">Change Layout</a>
     </div>
     <script>
         function goHome() {
