--- a/genai.html
+++ b/genai.html
@@ -65,6 +65,13 @@
             background-color: rgba(0, 0, 0, 0.8);
             color: #fff;
         }
+        footer a {
+            color: #1DA1F2;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -121,6 +128,22 @@
     </section>
 
     <section>
+        <h2>Watch Aespa at the MAMA Awards</h2>
+        <p>Check out their iconic performance at the MAMA Awards:</p>
+        <div style="text-align:center;">
+            <iframe 
+                width="560" 
+                height="315" 
+                src="https://www.youtube.com/embed/QB7eaAAIZAU" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                allowfullscreen>
+            </iframe>
+        </div>
+    </section>
+
+    <section>
         <h2>MAMA Awards</h2>
         <p>The MAMA Awards (Mnet Asian Music Awards) is one of the most prestigious music award shows in Asia. Aespa's performance and recognition at the MAMA Awards highlight their influence and achievements in the music industry. Their innovative style and captivating performances have won them numerous awards and global acclaim.</p>
     </section>
@@ -128,6 +151,9 @@
 
 <footer>
     <p>&copy; 2024 Aespa Fan Page</p>
+    <p>Follow Aespa on Instagram: 
+        <a href="https://www.instagram.com/aespa_official/" target="_blank">instagram.com/aespa_official</a>
+    </p>
 </footer>
 
 </body>
