--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
     </div>
     
     <footer class="footer">
-        <a href="https://open.spotify.com/" target="_blank" class="footer-link">
+        <a href="https://open.spotify.com/user/31ppcyvsihp5edpzr3lbhz6igt5u?si=fc56ed82211a4e75" target="_blank" class="footer-link">
             <img src="pictures/spotify.png" alt="Spotify" class="footer-icon"> Spotify
         </a>
-        <a href="https://www.linkedin.com/" target="_blank" class="footer-link">
+        <a href="https://www.linkedin.com/in/junyiwuuu" target="_blank" class="footer-link">
             <img src="pictures/linkedin.png" alt="LinkedIn" class="footer-icon"> LinkedIn
         </a>
-        <a href="https://www.instagram.com/" target="_blank" class="footer-link">
+        <a href="https://github.com/Taotao2003" target="_blank" class="footer-link">
             <img src="pictures/github.png" alt="Instagram" class="footer-icon"> Instagram
         </a>
     </footer>
