--- a/qualifications.html
+++ b/qualifications.html
@@ -18,38 +18,48 @@
     <div class="resume-page">
         <div class="resume">
             <h2> My Resume 😼</h2>
-            <embed src="JUNYI_WU_RESUME.pdf" width="100%" height="1000px" type="application/pdf">
+            <iframe src="https://drive.google.com/file/d/1O62T8r0Pfzvp4nqTQMS-PlchtxVzXs1C/preview" width="100%" height="1200px">
+
+            </iframe>
         </div>
-        <div class="description-box">
+        <div class="skill-box">
             <h3>Technical Skills</h3>
             <p><b>Programming Languages: </b>Python, C++, Verilog HDL, ARMv8 Assembly</p>
-            <p><b>Software Dev. Tools: </b>VS Code, Vivado</p>
+            <p><b>Software Dev. Tools: </b>VS Code, Cadence Virtuoso, Vivado, FPGA, LTSpice, Multisim, Arduino</p>
+            <p> I also have worked on circuit design thats either gate level, transistor levle, circuit, </p>
+            
+            <!-- <div class="cadence-picture">
+                <img src="pictures/cadence_layout.jpg" alt="cadence">
+            </div> -->
+            <div class="cpp-picture">
+                <img src="pictures/cpp.jpg" alt="cpp">
+            </div>
         </div>
-        <div class="description-box">
+        <div class="skill-box">
             <h3>Technical Areas of Interest</h3>
-            <ul>
-                <li>VLSI Systems Design</li>
-                <li>Computer Architecture</li>
-                <li>Hardware Verification</li>
-                <li>ASIC Design</li>
-            </ul>
-            <p> I am interested in these areas due to </p>
+            <p> I am interested in topics such as <b>VLSI</b> and <b>Computer Architecture</b> because they are form the foundation of 
+                modern computing. They are key to developing the next generation of high-performance processors while enabling advancements in AI and ML. 
+                I want to contribute to this key advancement that will greatly enhance our lives through this groundbreaking technology. 
+            </p>
+            <div class = "cadence-picture">
+                <img src="pictures/vlsi_2.jpg" alt="vlsi">
+            </div>
         </div>
     </div>
     </div>
-    <script>
-        function goHome() {
-            window.location.href = 'index.html';
-        }
-        function goToPortfolio() {
-            window.location.href = 'portfolio.html';
-        }
-        function goToService() {
-            window.location.href = 'service.html';
-        }
-        function goToAI() {
-            window.location.href = 'genai.html';
-        }
-    </script>
+
+
+
+    <footer class="footer">
+        <a href="https://open.spotify.com/" target="_blank" class="footer-link">
+            <img src="pictures/spotify.png" alt="Spotify" class="footer-icon"> Spotify
+        </a>
+        <a href="https://www.linkedin.com/" target="_blank" class="footer-link">
+            <img src="pictures/linkedin.png" alt="LinkedIn" class="footer-icon"> LinkedIn
+        </a>
+        <a href="https://www.instagram.com/" target="_blank" class="footer-link">
+            <img src="pictures/github.png" alt="Instagram" class="footer-icon"> Instagram
+        </a>
+    </footer>
 </body>
 </html>
