--- a/service_HTML.html
+++ b/service_HTML.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Page</title>
-    <link rel="stylesheet" href="style1.css">
+    <!-- <link rel="stylesheet" href="style1.css"> -->
 </head>
 <body>
     <div class="container">
-        <a href="index.html" class="button">Home</button>
-        <a href="portfolio.html" class="button">Portfolio</a>
-        <a href="qualifications.html" class="button">Resume</a>
-        <a href="service.html" class="button">Service</a>
+        <a href="index_HTML.html" class="button">Home</button>
+        <a href="portfolio_HTML.html" class="button">Portfolio</a>
+        <a href="qualifications_HTML.html" class="button">Resume</a>
+        <a href="service_HTML.html" class="button">Service</a>
         <a href="genai.html" class="button">GPT Page</a>
         <a class="button">Change Layout</a>
     </div>
